
Fixed bugs
----------

- fixed definition of slack variables of >= constraints and ranged rows in LP interface to Gurobi (lpi_grb.c)
- free memory leaking singleton arrays for ignored variables in SCIPapplyHeurDualval()
- use epsilon tolerance for bound implications of dual substitutions in dualPresolve() of cons_linear.c
- fixed timeouts due to race conditions when using TPI=omp
- respect fixing if variable is declared binary in bounds section of mps file
- force local bounds to adjusted value when fixing variable

Build system
------------

### Cmake

-  allow to set HIGHS_DIR via -D flag as well
- reenable building and testing of SCFLP example

### Makefile

- fix use of SANITIZE=full for debug builds with GCC on Linux: removed -fsanitize=leak because it cannot be used together with -fsanitize=address
- fix that make install SHARED=true missed to install libscipbase

Miscellaneous
-------------

@section RN921 SCIP 9.2.1
*************************

Fixed bugs
----------

- apply same feasibility definition in PaPILO as in SCIP to avoid numerical inconsistencies
- check variable cancellation in SCIPvarAddVlb() and SCIPvarAddVub() to avert wrong infeasibility
- SCIPfreeReoptSolve() now also clears partial solutions
- fixed bug in calculation of "fractionality score" for spatial branching candidates in cons_nonlinear
- fixed bug with installing symmetry dialog in sub-SCIPs
- added copy callbacks for presolvers dualagg and redvub, branching rules lookahead and cloud, primal heuristics dualval and repair, propagator nlobbt, and separators gauge and convexproj
- respect maximal separation rounds setting by running remaining delayed separators in last round
- replace terms consistently in applyFixings() of cons_linear to handle infinite aggregations
- fixed bug with SOS2 constraints of size that avoided a correct enforcing

Build system
------------

### Cmake
